--- a/first.html
+++ b/first.html
@@ -23,6 +23,7 @@
     <p>Hello world <strong>I'm learning</strong></p>
     <p>This is other paragraph</p>
     <script>
+        //Usando Ramas
         //var=1x; Primer Caracter siempre debe ser letra
         //mayusculas y minusculas son diferentes
         //var=$x;
