nuevo cambio en la nueva rama

--- a/first.html
+++ b/first.html
@@ -22,7 +22,7 @@
 <body>
     <p>Hello world <strong>I'm learning</strong></p>
     <p>This is other paragraph</p>
-    <script>
+    <script>//new branch
         //Usando Ramas
         //var=1x; Primer Caracter siempre debe ser letra
         //mayusculas y minusculas son diferentes
