--- a/index.html
+++ b/index.html
@@ -19,20 +19,17 @@
     </style>
 </head>
 
-<body>
+<body> 
+        
+        
     <p>Hello world <strong>I'm learning</strong></p>
     <p>This is other paragraph</p>
     <script>
-        //var=1x; Primer Caracter siempre debe ser letra
-        //mayusculas y minusculas son diferentes
-        //var=$x;
-        //var=_x; Ambos funcionan en JS
-        var x=1;
-        var y=2;
-        var z=x+y;
+        var x=1;//Primer Caracter en nombre var siempre debe ser letra
+        var y=2;//var=$x;var=_x; Ambos funcionan
+        var z=x+y;//Mayusculas y minusculas son diferentes
         document.write("The value of  z es " +z+" I'm Text make with Js");
         //alert("Hello I'm Alert and The value of  z s " +z);
     </script>
 </body>
-
 </html>
