--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Curso JS Platzi</title>
+    <title>Javascript</title>
     <style>
         body {
             background-color: #aaaaff;
@@ -19,27 +19,13 @@
     </style>
 </head>
 
-<body> 
-        
-        
+<body>    
     <p>Hello world <strong>I'm learning</strong></p>
     <p>This is other paragraph</p>
-<<<<<<< HEAD:index.html
     <script>
         var x=1;//Primer Caracter en nombre var siempre debe ser letra
         var y=2;//var=$x;var=_x; Ambos funcionan
         var z=x+y;//Mayusculas y minusculas son diferentes
-=======
-    <script>//new branch yeah
-        //Usando Ramas
-        //var=1x; Primer Caracter siempre debe ser letra
-        //mayusculas y minusculas son diferentes
-        //var=$x;
-        //var=_x; Ambos funcionan en JS
-        var x=1;
-        var y=2;
-        var z=x+y;
->>>>>>> 96e11f2dd470fe86f28c702f34c909bec08384e8:first.html
         document.write("The value of  z es " +z+" I'm Text make with Js");
         //alert("Hello I'm Alert and The value of  z s " +z);
     </script>
