--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Programación Básica</h1>
+      <h1>Programación Básica 💻</h1>
       <hr />
       <p>
         En este curso vamos a aprender los conceptos basicos de programación
@@ -119,7 +119,7 @@
             >Recuerda: Todo en programación tiene que ver con seguir las reglas
             de un lenguaje y luego crear las instrucciones que quieres para
             lograr los objetivos que deseas.
-            <br />
+            <br /><br>
             TIP: En consola puedes hacer más grande el tamaño de la letra con
             Ctrl y +
         </samp >
@@ -127,7 +127,7 @@
       </div>
 
       <div>
-          <h3>HTML, CSS, JavaScript de verdad</h3>
+          <h3>HTML, CSS, JavaScript de verdad <a href="https://youtu.be/jhKg2ns9heQ">▶</a></h3>
     
     </div>
 
