primera practica front

--- a/index.html
+++ b/index.html
@@ -118,18 +118,59 @@
           <samp
             >Recuerda: Todo en programación tiene que ver con seguir las reglas
             de un lenguaje y luego crear las instrucciones que quieres para
-            lograr los objetivos que deseas.
-            <br /><br>
+            lograr los objetivos que deseas. <br /><br />
             TIP: En consola puedes hacer más grande el tamaño de la letra con
             Ctrl y +
-        </samp >
+          </samp>
         </div>
       </div>
 
       <div>
-          <h3>HTML, CSS, JavaScript de verdad <a href="https://youtu.be/jhKg2ns9heQ">▶</a></h3>
-    
-    </div>
+        <h3>
+          HTML, CSS, JavaScript de verdad
+          <a href="https://youtu.be/jhKg2ns9heQ">▶</a>
+        </h3>
+        <p>
+          Todos los contenidos en HTML deberían estar dentro de una etiqueta, y
+          todos los archivos HTML usan esta estructura
+        </p>
+        <p>
+          La etiqueta que te permite escribir CSS dentro de HTML es
+          <strong>style</strong>, se coloca dentro de head. La etiqueta para
+          escribir JS dentro de HTML es <strong>script</strong>, se coloca antes
+          de terminar el body.
+        </p>
+
+        <div class="alert alert-warning mt-3">
+          Recuerda: Los nombres de las variables JS tienen algunas reglas:<br />
+          <li>
+            No pueden tener espacios, pueden tener numeros pero unicamente al
+            inicio del nombre
+          </li>
+          <li>
+            Debe empezar siempre con una letra, las minúsculas y las mayúsculas
+            importan, son diferentes
+          </li>
+          <li>No se permiten caracteres especiales como Ñ etc..</li>
+          <li>Permite inicar el nobre con _ o con signo $ y funciona</li>
+          <li>
+            Identación, tienes bloques de código, estos deben ir un poco a la
+            derecha
+          </li>
+        </div>
+        <p>
+          <strong>Doctype</strong> es una etiqueta estandar de HTML 5<br />
+          <strong> style </strong> tiene el atributo type: text/css <i> * Buena práctica</i><br>
+          <strong> script </strong> tiene el atributo type: text/javascript <i>  *Buena práctica</i>
+        </p>
+
+        <div class="alert alert-success mt-3">
+          Los programadores pasan 80% de su tiempo leyendo código y 20%
+          escribiendo código, por esto es importante seguir buenas prácticas. Es
+          importante ver las extensiones de los archivos. Los lenguajes son 90%
+          similares y 20% diferentes
+        </div>
+      </div>
 
       <div class="alert alert-dark mt-3">
         <samp>about:blank</samp>
