iniciando proyecto 1 peso en otro planeta

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
 
       <div>
-        <h3>¿Que es HTML/CSS/JS?</h3>
+        <h3>¿Que es HTML/CSS/JS? ( Apuntes PDF <a href="Docs/Programación basica.pdf" target="_blank">📃</a>)</h3>
         <p>
           Son los tres lenguajes que están en el centro de crear aplicaciones
           Web
@@ -103,16 +103,19 @@
           nombre, operador de asignación (=) y el valor que va a tener. en la
           mayoria de lenguajes de programacion funciona igual
         </p>
-        <div class="alert alert-dark mt-3">
-          <samp
-            >var x = 1;<br />
-            var y = 2;<br />
-            var z = x + y; //Suma entre variables<br />
-            <br />
-            alert("el valor de Z es :"+ z); // Concatenado valores en un
-            alert<br />
-            el valor de alert es 3 // Salida de codigo<br />
-          </samp>
+        <div class="row mb-4" style="margin: auto; height: 100%"> 
+              <img src="Images/ProgBasica-06.png" width="600" alt="" class="col-lg-6">
+              <div class="alert alert-dark mt-3 col-lg-6">
+                <samp>
+                  var x = 1;<br />
+                  var y = 2;<br />
+                  var z = x + y; //Suma entre variables<br />
+                  <br />
+                  alert("el valor de Z es :"+ z); // Concatenado valores en un
+                  alert<br />
+                  el valor de alert es 3 // Salida de codigo<br />
+                </samp>
+              </div>
         </div>
         <div class="alert alert-warning">
           <samp
@@ -128,16 +131,18 @@
       <div>
         <h3>
           HTML, CSS, JavaScript de verdad
-          <a href="https://youtu.be/jhKg2ns9heQ">▶</a>
+          <a href="https://youtu.be/jhKg2ns9heQ" target="_blank">▶</a>
         </h3>
         <p>
-          Todos los contenidos en HTML deberían estar dentro de una etiqueta, y
+          Todos los contenidos en HTML deberían estar dentro de una etiqueta de apertura y una de cierre, y
           todos los archivos HTML usan esta estructura
         </p>
         <p>
+          En el <strong>head</strong> van metadatos y son contenido no visible, relacionados con caracteres especiales o estilos, la etiqueta <strong>title</strong> (titulo para buscadores) y <strong>style</strong> son un ejemplo
+        </p>
           La etiqueta que te permite escribir CSS dentro de HTML es
           <strong>style</strong>, se coloca dentro de head. La etiqueta para
-          escribir JS dentro de HTML es <strong>script</strong>, se coloca antes
+          escribir JS dentro de HTML es <strong>script</strong>, se coloca justo antes
           de terminar el body.
         </p>
 
@@ -170,6 +175,11 @@
           importante ver las extensiones de los archivos. Los lenguajes son 90%
           similares y 20% diferentes
         </div>
+      </div>
+
+      <div> 
+        <h3>Proyecto 1:  Peso en otro planeta</h3>
+
       </div>
 
       <div class="alert alert-dark mt-3">
